nohup.out
Traceback (most recent call last):
  File "schedDo.py", line 9, in <module>
    import getMorning
  File "/home/MorningNews/getMorning.py", line 12, in <module>
    from sendEmail import send_email
  File "/home/MorningNews/sendEmail.py", line 17, in <module>
    datefmt='%Y-%m-%d%I:%M:%S %p')
  File "/usr/local/python3/lib/python3.6/logging/__init__.py", line 1776, in basicConfig
    h = FileHandler(filename, mode)
  File "/usr/local/python3/lib/python3.6/logging/__init__.py", line 1025, in __init__
    StreamHandler.__init__(self, self._open())
  File "/usr/local/python3/lib/python3.6/logging/__init__.py", line 1054, in _open
    return open(self.baseFilename, self.mode, encoding=self.encoding)
FileNotFoundError: [Errno 2] No such file or directory: '/LOG/sendEmail.log'
  File "schedDo.py", line 43
    if counter == 12:
     ^
IndentationError: expected an indented block
Traceback (most recent call last):
  File "schedDo.py", line 9, in <module>
    import getMorning
  File "/home/MorningNews/getMorning.py", line 18, in <module>
    logging_email.basicConfig(filename='LOG/'+__name__+'.log',
AttributeError: 'RootLogger' object has no attribute 'basicConfig'
